--- a/projects/tetris/tetris.html
+++ b/projects/tetris/tetris.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>tetris</title>
+	<link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> 
 	<link rel="stylesheet" href="tetris.css">
 </head>
 <body>
 	<canvas id="canvas"></canvas>
+	<div id="score-container">
+		Score: <span id="score"></span>
+	</div>
 	<script src="tetris.js"></script>
 </body>
 </html>
