--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 			</a>
 		</div>
 		<div class="row">
-			<a href="#">
+			<a href="/projects/tetris/">
 				<div class="col-md-3 text-center changeenter">
 				
-					<img class="img-responsive center  empty" src="images/emptyjar.png"/>
+					<img class="img-responsive center  empty" src="images/tetris.png"/>
+					<p>Tetris</p>
 				
 				</div>
 			</a>
