--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</a>
 		</div>
 		<div class="row">
-			<a href="/projects/tetris/">
+			<a href="projects/tetris/">
 				<div class="col-md-3 text-center changeenter">
 				
 					<img class="img-responsive center  empty" src="images/tetris.png"/>
