Add next piece area

--- a/projects/tetris/index.html
+++ b/projects/tetris/index.html
@@ -11,6 +11,14 @@
 	<div id="score-container">
 		Score: <span id="score"></span>
 	</div>
+	<div id="next-piece-label">
+		Next:
+	</div>
+	<div id="next-piece-outer">
+		<div id="next-piece-inner">
+			<canvas id="next-piece"></canvas>
+		</div>
+	</div>
 	<script src="tetris.js"></script>
 </body>
 </html>
