basic loading and playing songs

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -14,7 +14,7 @@
             <div class="sidebar">
                 <div class="sidebar-navbar">
                     <div class="sidebar-icons-outer">
-                        <div class="sidebar-icon sidebar-icon-active" title="Tracks" name="tracks">
+                        <div class="sidebar-icon sidebar-icon-active" title="Tracks" name="songs">
                             <img src="./icons/icons8-audio-file-24.png">
                         </div>
                         <div class="sidebar-icon" title="Albums" name="albums">
@@ -32,9 +32,9 @@
                     </div>
                 </div>
                 <div class="sidebar-content-outer">
-                    <div id="sidebar-tracks" class="sidebar-content sidebar-content-active">
+                    <div id="sidebar-songs" class="sidebar-content sidebar-content-active">
                         <div class="sidebar-header">
-                            <span>Tracks</span>
+                            <span>Songs</span>
                         </div>
                         <div class="sidebar-list">
                             <ul id="track-list">
