Add header to music list

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -108,6 +108,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="music-item-key">
+                        <div class="music-item-info info-padding"></div>
+                        <div class="music-item-info music-item-title">
+                            Title
+                        </div>
+                        <div class="music-item-info info-padding"></div>
+                        <div class="music-item-info music-item-artist">
+                            Artist
+                        </div>
+                        <div class="music-item-info info-padding"></div>                        
+                        <div class="music-item-info music-item-album">
+                            Album
+                        </div>
+                    </div>
                     <div class="music-list">
                         <!--
                         <div class="music-item">
