Add more control functionality

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -92,13 +92,13 @@
                             
                         </div>
                         <div class="panel-controls">
-                            <div class="panel-control">
+                            <div class="panel-control panel-option panel-control-hidden">
                                 DELETE
                             </div>
-                            <div class="panel-control">
+                            <div class="panel-control panel-option panel-control-hidden">
                                 RENAME
                             </div>
-                            <div class="panel-control">
+                            <div class="panel-control panel-option panel-control-hidden">
                                 ADD SONGS
                             </div>
                             <div class="panel-control">
@@ -166,25 +166,25 @@
             <div class="media-controls">
                 <div class="media-controls-inner">
                     <div class="control-buttons">
-                        <div class="skip-back">
+                        <div class="skip-back control-disabled">
                             <img src="./icons/icons8-skip-to-start-50.png" alt="">
                         </div>
-                        <div class="toggle-play">
+                        <div class="toggle-play control-disabled">
                             <img src="./icons/icons8-circled-play-filled-50.png" alt="">
                         </div>
-                        <div class="skip-forward">
+                        <div class="skip-forward control-disabled">
                             <img src="./icons/icons8-end-50.png" alt="">
                         </div>
                     </div>
                     <div class="seek-outer">
                         <div class="current-time">
-                            0:00
+                            00:00
                         </div>
                         <div class="seek-bar">
                             <div class="seek-bar-inner"></div>
                         </div>
                         <div class="song-time">
-                            0:00
+                            00:00
                         </div>
                     </div>
                 </div>
