seeking/ skip/ skip back functions

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -196,7 +196,7 @@
                 <div class="shuffle">
                     <img src="./icons/icons8-shuffle-50.png" alt="">
                 </div>
-                <div class="loop">
+                <div class="loop loop-disabled">
                     <img src="./icons/icons8-repeat-50.png" alt="">
                 </div>
                 <div class="volume">
