Add playlist controls; fix shuffle

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -65,6 +65,13 @@
                     <div id="sidebar-playlists" class="sidebar-content">
                         <div class="sidebar-header">
                             <span>Playlists</span>
+                            <div class="new-playlist-toggle">
+                                NEW
+                            </div>
+                        </div>
+                        <div class="new-playlist-form">
+                            <input type="text" class="new-playlist-name" placeholder="Playlist Name" maxlength="50">
+                            <div class="new-playlist-submit">ADD</div>
                         </div>
                         <div class="sidebar-list">
                             <ul id="playlist-list">
