fix options and shuffle/queue

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -223,6 +223,12 @@
             </div>
         </div>
     </div>
+    <div class="success-message">
+        <div class="success-message-inner">
+            <img class="success-check" src="./icons/icons8-checkmark-52.png" alt="">
+            <span id="success-message-text">Added to playlist.</span>
+        </div>
+    </div>
     <script
     src="./jquery-3.0.0.min.js"></script>
     <script src="index.js"></script>
