modify parsing and rendering

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -73,7 +73,7 @@
                             <input type="text" class="new-playlist-name" placeholder="Playlist Name" maxlength="50">
                             <div class="new-playlist-submit">ADD</div>
                         </div>
-                        <div class="sidebar-list">
+                        <div id="playlist-list-outer" class="sidebar-list">
                             <ul id="playlist-list">
                                 
                             </ul>
