add new ui controls

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -99,14 +99,14 @@
                             
                         </div>
                         <div class="panel-controls">
-                            <div class="panel-control panel-option panel-control-hidden">
+                            <div class="panel-control panel-option playlist-option panel-control-hidden">
                                 DELETE
                             </div>
-                            <div class="panel-control panel-option panel-control-hidden">
+                            <div class="panel-control panel-option playlist-option panel-control-hidden">
                                 RENAME
                             </div>
-                            <div class="panel-control panel-option panel-control-hidden">
-                                ADD SONGS
+                            <div class="panel-control panel-option">
+                                ADD TO PLAYLIST
                             </div>
                             <div class="panel-control">
                                 <span class="panel-play">
@@ -225,9 +225,29 @@
     </div>
     <div class="success-message">
         <div class="success-message-inner">
-            <img class="success-check" src="./icons/icons8-checkmark-52.png" alt="">
+            <img class="success-check" src="./icons/icons8-ok-50.png" alt="">
             <span id="success-message-text">Added to playlist.</span>
         </div>
+    </div>
+    <div class="playlist-select">
+        <div class="playlist-select-header">
+            Select playlist.
+        </div>
+        <div class="playlist-select-list">
+            <ul>
+                <li>test 1</li>
+                <li>test 2</li>
+                <li>test 3</li>
+                <li>test 4</li>
+                <li>test 5</li>
+                <li>test 6</li>
+                <li>test 7</li>
+                <li>test 8</li>
+                <li>test 9</li>
+                <li>test 10</li>
+            </ul>
+        </div>
+        <div class="exit-button"></div>
     </div>
     <script
     src="./jquery-3.0.0.min.js"></script>
