add more playlist functionality

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -99,13 +99,13 @@
                             
                         </div>
                         <div class="panel-controls">
-                            <div class="panel-control panel-option playlist-option panel-control-hidden">
+                            <div id="panel-delete" class="panel-control panel-option playlist-option panel-control-hidden">
                                 DELETE
                             </div>
-                            <div class="panel-control panel-option playlist-option panel-control-hidden">
+                            <div id="panel-rename" class="panel-control panel-option playlist-option panel-control-hidden">
                                 RENAME
                             </div>
-                            <div class="panel-control panel-option">
+                            <div id="panel-addtoplaylist" class="panel-control panel-option">
                                 ADD TO PLAYLIST
                             </div>
                             <div class="panel-control">
@@ -235,19 +235,11 @@
         </div>
         <div class="playlist-select-list">
             <ul>
-                <li>test 1</li>
-                <li>test 2</li>
-                <li>test 3</li>
-                <li>test 4</li>
-                <li>test 5</li>
-                <li>test 6</li>
-                <li>test 7</li>
-                <li>test 8</li>
-                <li>test 9</li>
-                <li>test 10</li>
             </ul>
         </div>
-        <div class="exit-button"></div>
+        <div class="exit-button">
+            <img src="./icons/icons8-delete-26.png">
+        </div>
     </div>
     <script
     src="./jquery-3.0.0.min.js"></script>
