Add ability to rename playlist

--- a/projects/music_player/index.html
+++ b/projects/music_player/index.html
@@ -100,6 +100,14 @@
                                 <div id="index-name" class="panel-title">
                                     
                                 </div>
+                                <div id="index-rename" class="panel-title panel-title-hidden">
+                                    <div class="panel-title-inner">
+                                        <input id="index-rename-input" type="text" maxlength="50">
+                                        <div class="index-rename-submit">
+                                            <img src="./icons/icons8-ok-50.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="panel-controls">
                                     <div id="panel-delete" class="panel-control panel-option playlist-option panel-control-hidden">
                                         DELETE
