Scale backgrounds properly; get bg amount dynamically

--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -36,7 +36,7 @@
 		<div class="windows-container-inner">
 			<div id="links-bg" class="window-bg">
 				<div class="window-bg-inner">
-					<img src="" alt="">
+					<div class="window-bg-img"></div>
 				</div>
 			</div>
 			<div id="links" class="window">
@@ -59,7 +59,7 @@
 			</div>
 			<div id="news-bg" class="window-bg">
 				<div class="window-bg-inner">
-					<img src="" alt="">
+					<div class="window-bg-img"></div>
 				</div>
 			</div>
 			<div id="news" class="window">
@@ -76,7 +76,7 @@
 			</div>
 			<div id="time-bg" class="window-bg">
 				<div class="window-bg-inner">
-					<img src="" alt="">
+					<div class="window-bg-img"></div>
 				</div>
 			</div>
 			<div id="time" class="window">
@@ -103,7 +103,7 @@
 			</div>
 			<div id="weather-bg" class="window-bg">
 				<div class="window-bg-inner">
-					<img src="" alt="">
+					<div class="window-bg-img"></div>
 				</div>
 			</div>
 			<div id="weather" class="window">
