--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -192,10 +192,15 @@
 		</div>
 	</div>
 	<div id="searchbar">
-		<div class="glyph">anon34533:<span>~$</span></div>
+		<div class="glyph">james:<span>~$</span></div>
 		<input id="search-input" spellcheck="false" type="text">
 	</div>
 	<script src="./js/jquery-3.2.1.min.js"></script>
+	
+	<script
+		src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+		integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+		crossorigin="anonymous"></script>
 	<script src="./js/index.js"></script>
 </body>
 </html>
